Refactor code for improved readability and error handling
Converted usage of Arrays to List for hint settings across multiple files for better modern API usage. Replaced lambda expressions with method references where applicable. Replaced exception stack traces with RuntimeException throws for more consistent exception handling. Removed unused imports and redundant generic type arguments for cleaner code.