@@ -4,12 +4,13 @@ import com.googlecode.lanterna.gui2.*;
 import com.googlecode.lanterna.gui2.Panel;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class BookAddWindow extends BasicWindow {
 	
 	public BookAddWindow(int progress) {
 		super("Library Catalogue System");
-		setHints(Arrays.asList(Window.Hint.CENTERED));
+		setHints(List.of(Hint.CENTERED));
 		ProgressBar progressBar = new ProgressBar();
 		Panel mainPanel = new Panel();
 		mainPanel.setLayoutManager(new LinearLayout(Direction.VERTICAL));
