@@ -4,7 +4,7 @@ import com.googlecode.lanterna.TerminalSize;
 import com.googlecode.lanterna.gui2.*;
 import databaselayer.Password;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class LoginWindow extends BasicWindow {
 	Password passwordClass = new Password();
@@ -12,7 +12,7 @@ public class LoginWindow extends BasicWindow {
 	TextBox passwordBox;
 	public LoginWindow() {
 		super("Login to member account");
-		setHints(Arrays.asList(Window.Hint.CENTERED));
+		setHints(List.of(Hint.CENTERED));
 		Panel mainPanel = new Panel();
 		Panel usernamePanel = new Panel();
 		usernameBox = new TextBox(new TerminalSize(30, 1));
@@ -22,11 +22,7 @@ public class LoginWindow extends BasicWindow {
 		passwordBox.setMask('*');
 		passwordPanel.addComponent(passwordBox);
 		Panel exitPanel = new Panel();
-		Button exit = new Button("Enter", new Runnable() {
-			public void run() {
-				LoginWindow.this.close();
-			}
-		});
+		Button exit = new Button("Enter", LoginWindow.this::close);
 		exitPanel.addComponent(exit);
 		mainPanel.setLayoutManager(new LinearLayout(Direction.VERTICAL));
 		mainPanel.addComponent(usernamePanel.withBorder(Borders.singleLine("Username")));
